--- a/client/README
+++ b/client/README
@@ -1,9 +1,20 @@
-Pystream Linux client needs python 2.6+ with pygtk.
+Pystream Linux client needs python 2.6+ with pygtk or Tcl/Tk.
 Miniupnpc python module is from http://miniupnp.free.fr/ and has a BSD License.
+
 
 RUN:
 ----
-This software has no need to install, just runs gui_gtk.py
+This software has no need to install.
+
+Linux:
+- Run pystream_gtk.py or pystream_tk.py
+
+Windows:
+- Run pystream_tk.exe
+
+Mac:
+- Run pystream_tk.py
+
 
 CONTACT:
 --------
