--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Pystream client and server:
 - Author: Carlos García Gómez.
-- License: see COPUNG.txt files in client and server folders.
+- License: see COPYING.txt files in client and server folders.
