- Removed old client. - new_client -> Pystream Sharing Tool. - API completed. - Lots of bug fixes.

--- a/new_client/README
+++ b/new_client/README
@@ -7,13 +7,13 @@ RUN:
 This software has no need to install.
 
 Linux:
-- Run pystream_gtk.py or pystream_tk.py
+- Run pystream.py
 
 Windows:
-- Run pystream_tk.exe
+- Run pystream.exe
 
 Mac:
-- Run pystream_tk.py
+- Run pystream.py
 
 
 CONTACT:
